<resources>
    <string name="app_name">GetVaxi</string>

    //login
    <string name="login_page_email_hint">Email</string>
    <string name="login_page_password_hint">Password</string>
    <string name="login_page_login_button">Login</string>
    <string name="login_page_forgot_password">Forget Password</string>
    <string name="login_page_sign_up">Sign Up</string>

    <string name="why_vaccinate_des">On-time vaccination throughout childhood is essential because it helps provide immunity before children are exposed to potentially life-threatening diseases. Vaccines are tested to ensure that they are safe and effective for children to receive at the recommended ages.</string>
    <string name="why_vaccine_well_chile_visit">As communities open up, it’s important your child goes in for their well-child visit.</string>
    <string name="why_vaccine_acctivity_head_label">Why Vaccinate</string>
    <string name="why_vaccine_acctivity_more_details">More details</string>
    <string name="why_vaccine_activity_vaccine_decison">Making the Vaccine Decision</string>
    <string name="why_vaccine_activity_learn_about">Learn all about vaccines and immunity, what vaccines are made of, and how they are kept safe.</string>


    <string name="view_bookings_confirm">Confirm</string>
    <string name="view_bookings_decline">Decline</string>

    //HomeActivity
    <string name="user_home_activity_why_vaccination">Why Vaccination</string>
    <string name="user_home_activity_vaccination_schedule">Vaccination Schedule</string>
    <string name="user_home_activity_disease_prevent">Diseases that Vaccine Prevent</string>
    <string name="user_home_activity_child_vaccine_visit">Your Child Vaccine Visit</string>
    <string name="user_home_activity_child_track_appointment">Track Appointment</string>
    <string name="user_home_activity_child_before_travel">Before You Travel</string>
    <string name="user_home_activity_child_any_questions">Any Questions ?</string>
    <string name="user_home_activity_child_my_profile">My Profile</string>
    <string name="user_home_activity_child_logout">Log Out</string>

    //vaccineschedule

    //bookvaccine
    <string name="book_vaccine_appointment_date_hint">Date of Appointment</string>
    <string name="book_vaccine_date_of_birth_hint">Date of Birth</string>
    <string name="book_vaccine_book_appointment_button">Book Appointment</string>
    <string name="book_vaccine_book_vaccine_name_hint">Vaccine Name</string>

    //addnewchild
    <string name="add_new_child_activity_name_hint">Child Full Name</string>
    <string name="add_new_child_activity_dob_hint">Child Date of Birth</string>
    <string name="add_new_child_activity_add_child_button">Add Child</string>

    //trackbookings view holder
    <string name="user_track_bookings_activity_review_button">Review</string>
    <string name="user_track_bookings_activity_info_label">Info</string>

    <string name="user_track_bookings_name_label">Name</string>
    <string name="user_track_bookings_dob_label">DOB</string>
    <string name="user_track_bookings_appointment_date_label">Appointment Date</string>

    <string name="booking_status_confirmed">Confirmed</string>
    <string name="booking_status_vacinated">Your Child has Vaccinated at </string>
    <string name="booking_status_completed">Completed</string>
    <string name="booking_status_declined">Declined</string>
    <string name="booking_status_pending_with_CLSC">Pending With CLSC</string>
    <string name="booking_status_cancelled"> Cancelled</string>


    //toasts
    <string name="toast_booking_conpleted_wait_confirmation">Booking Completed: Wait for Confirmation</string>
    <string name="booking_validation_failed">Validation Failed : Try again</string>
    <string name="toast_no_boorkings">Sorry You dont have any bookings</string>
    <string name="appointment_rescheduled_confirm">Appointment has been rescheduled</string>
    <string name="invalid_date_selection">Invalid Date Selected</string>


    //datepicker
    <string name="appointment_date_picker_title">Select an Appointment date</string>
    <string name="date_of_birth_picker_title">Select an Date of Birth</string>

    //signuplogin
    <string name="signup_invalid_email_toast">Invalid Email</string>
    <string name="signup_password_mismatch_toast">Password Mismatch</string>
    <string name="signup_password_invalid_phone_number">Invalid Phone Number</string>

    //clsc home activity
    <string name="clc_home_new_bookings">New Bookings</string>
    <string name="clc_home_confirmed_bookings">Confirmed Bookings</string>
    <string name="clc_home_vaccine_stock">Vaccine Stock</string>
    <string name="clc_home_new_questions">New Questions</string>
    <string name="clc_home_new_hospital">New Hospital</string>
    <string name="clc_home_logout">Log Out</string>
    <string name="log_out_caution">Do you want to logout from the TrustVaccination ?</string>
    <string name="log_out_caution_yes">Yes</string>
    <string name="log_out_caution_no">No</string>
    <string name="log_out_messgae_signing_out">Signing Out...</string>

    <string name="clc_add_hospital_hospital_name">Hospital Name</string>
    <string name="clc_add_hospital_hospital_address">Hospital Address</string>
    <string name="clc_add_hospital_add_hospital_button">Add Hospital</string>

    //before you travel
    <string name="before_u_travel_label">Before your Travel</string>
    <string name="before_u_travel_label_description">Protect your child and family when traveling in the United States or abroad by:
        Getting the shots required for all countries you and your family plan to visit during your trip Making sure you and your family are up-to-date on all routine U.S. vaccines Staying informed about travel notices and alerts and how they can affect your family’s travel plans</string>
    <string name="before_u_travel_activity_month_before">Vaccinate at least a month before you travel</string>
    <string name="before_u_tarvel_activity_moth_bfore_description">Your body needs time to build up immunity.
You may need several weeks to get all the doses of the vaccine.
Your primary doctor may not stock travel vaccines. Visit a travel medical clinic.
You’ll need time to prepare for your pre-travel appointment.
If the country you visit requires a yellow fever vaccine, only a limited number of clinics have the vaccine and will probably be some distance from where you live. You must get it at least 10 days before travel.</string>
    <string name="before_u_travel_activity_last_min_travel_label">Last-minute travelers</string>
    <string name="before_u_travel_activity_last_min_travel_dec">When traveling to another country be aware your doctor may not carry a travel vaccine and you may have to visit a medical clinic.
        Many travel vaccines require multiple shots or take time to become fully effective. But some multiple-dose vaccines (like hepatitis A) can still give you partial protection after just one dose. Some can also be given on an “accelerated schedule,” meaning doses are given in a shorter period of time.r</string>

    //my profile
    <string name="my_profile_activity_add_child_button">Add Child</string>
    <string name="my_profile_activity_update_button">Update</string>
    <string name="my_profile_activity_children_info">Children Info...</string>

    //profile compelte
    <string name="profile_complete_child_additional_info">Info: Minimum one child information is required here, You can add more children inside the Myprofile section.</string>
    //hints
    <string name="profile_complete_name">Full Name</string>
    <string name="profile_complete_law_partner_name">Common Law Partner name</string>
    <string name="profile_complete_law_phone_number">Phone Number</string>
    <string name="profile_complete_law_province">Please Select Province</string>
    <string name="profile_complete_law_address">Address</string>
    <string name="profile_complete_law_button_update">Update Profile</string>

    //hospirtal add activity
    <string name="clsc_add_hospital_activity_hosital_added">Hospital has  been added Successfully</string>

</resources>