<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/clc_home_include"
        layout="@layout/toolbar"
        android:layout_width="412dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:layout_editor_absoluteX="-1dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="398dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clc_home_include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bef_u_travel_heading"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/before_u_travel_label"
                android:textColor="@color/colorMenuBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bef_u_firsttxt"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/before_u_travel_label_description"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bef_u_heading_month_before"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/before_u_travel_activity_month_before"
                android:textColor="@color/colorMenuBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bef_u_month_before"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/before_u_tarvel_activity_moth_bfore_description"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bef_u_travel_heading_last_minute"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/before_u_travel_activity_last_min_travel_label"
                android:textColor="@color/colorMenuBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bef_u_month_last_minute"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/before_u_travel_activity_last_min_travel_dec"
                android:textColor="#000000"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>