<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileCompleteActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/con_lay_eachitem"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:background="#C5EADB"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:contentPaddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="341dp"
            android:layout_height="514dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="307dp"
                android:layout_height="60dp"
                android:hint="@string/profile_complete_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_comple_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_law_partner"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="67dp"
                android:hint="@string/profile_complete_law_partner_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_comple_fullname_law_partner"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_phoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="60dp"
                android:hint="@string/profile_complete_law_phone_number"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField_law_partner"
                app:layout_constraintVertical_bias="0.0">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_comple_PhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="304dp"
                android:layout_height="56dp"
                android:hint="@string/profile_complete_law_province"
                app:layout_constraintBottom_toTopOf="@+id/but_update_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField_phoneNumber"
                app:layout_constraintVertical_bias="0.194">

                <AutoCompleteTextView
                    android:id="@+id/profile_complete_province_list"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="62dp"
                android:hint="@string/profile_complete_law_address"
                app:layout_constraintBottom_toTopOf="@+id/but_update_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pro_comple_address"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/but_update_profile"
                android:layout_width="340dp"
                android:layout_height="56dp"
                android:text="@string/profile_complete_law_button_update"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField4" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>