<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="142dp"
        android:layout_height="143dp"
        android:background="@mipmap/ic_launcher_logo"
        app:layout_constraintBottom_toTopOf="@+id/mat_crd_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mat_crd_signin"
        android:layout_width="372dp"
        android:layout_height="486dp"
        android:background="#C5EADB"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:contentPaddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="444dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="338dp"
                android:layout_height="58dp"
                android:hint="@string/login_page_email_hint"
                android:textColor="#000000"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.109">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="338dp"
                android:layout_height="58dp"
                android:hint="@string/login_page_password_hint"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.308">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/LoginAc_but_login"
                android:layout_width="296dp"
                android:layout_height="37dp"
                android:layout_marginBottom="88dp"
                android:background="@drawable/ic_wishlist_button_red_bg"
                android:text="@string/login_page_login_button"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:icon="@drawable/ic_login_black_18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.19" />

            <Button
                android:id="@+id/LoginAc_but_forgotPas"
                android:layout_width="296dp"
                android:layout_height="37dp"
                android:layout_marginBottom="88dp"
                android:text="@string/login_page_forgot_password"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                android:backgroundTint="@color/colorMenuBlue"
                android:background="@drawable/ic_wishlist_button_red_bg"
                app:icon="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LoginAc_but_login"
                app:layout_constraintVertical_bias="0.171" />

            <Button
                android:id="@+id/LoginAc_but_signup"
                android:layout_width="296dp"
                android:layout_height="37dp"
                android:background="@drawable/ic_wishlist_button_red_bg"
                android:text="@string/login_page_sign_up"
                android:textColor="#FFFFFF"
                android:visibility="visible"
                app:icon="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LoginAc_but_forgotPas"
                app:layout_constraintVertical_bias="0.245" />

            <Switch
                android:id="@+id/LoginAc_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:text="CLC"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LoginAc_but_signup" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>